# strikeout

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: daily_k_discord.yml
config/: ballparks.yaml  features.yaml  model_params.yaml  settings.py
data/predictions/: picks_2026-06-29.json  picks_2026-06-30.json  picks_2026-07-01.json  picks_2026-07-02.json  picks_2026-07-03.json  picks_2026-07-04.json  picks_2026-07-05.json  picks_2026-07-06.json  picks_2026-07-07.json  picks_2026-07-08.json  picks_2026-07-09.json  picks_2026-07-10.json  picks_2026-07-11.json  picks_2026-07-12.json  picks_2026-07-14.json  picks_2026-07-16.json  picks_2026-07-17.json  picks_2026-07-19.json  picks_2026-07-20.json  picks_2026-07-21.json  picks_2026-07-22.json  picks_2026-07-23.json  picks_2026-07-24.json  results_log.csv
data/state/: meta.json  pitcher_state.parquet  team_overall.parquet  team_vs_hand.parquet
notebooks/: 01_eda.ipynb  02_feature_exploration.ipynb  03_backtesting.ipynb  04_model_comparison.ipynb
scripts/: backfill_all.sh  daily_cron.sh  deploy_model.sh
src/dashboard/: __init__.py  csv_exporter.py  notification.py  streamlit_app.py
src/data/: backfill.py  fangraphs_loader.py  (+4 more)
tests/: conftest.py  test_data_loaders.py  test_features.py  test_leakage.py  test_model.py  test_pipeline.py
tools/: backfill_statcast.py  build_dataset.py  calibrate.py  daily_picks.py  eval_vs_log.py  odds.py  results.py  run_daily.bat  snapshot_state.py  train_model.py  validate_history.py
(+28 files in other folders)
