[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mlb-k-predictor"
version = "1.0.0"
description = "MLB Pitcher Strikeout Prediction System"
requires-python = ">=3.11"
dependencies = [
    "pybaseball>=2.3",
    "MLB-StatsAPI>=1.7",
    "meteostat>=1.7",
    "pandas>=2.1",
    "numpy>=1.26",
    "lightgbm>=4.1",
    "shap>=0.44",
    "optuna>=3.5",
    "scikit-learn>=1.4",
    "pyarrow>=14.0",
    "streamlit>=1.30",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "requests>=2.31",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]
orchestration = ["prefect>=2.14"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
